Added: - Spam control: user can do one action (post, etc.) once every 10 seconds - Quotes: registered users can quote and multiquote posts in a thread and then reply them. - Fixed some formating - Changed some models to work with new functionalities - Minor bugfixes

--- a/Forum/templates/Forum/cant_view.html
+++ b/Forum/templates/Forum/cant_view.html
@@ -1,8 +1,10 @@
-<html>
-<head>
-<title>Can't acces this page</title>
-</head>
-<body>
-You don't have permission to view this page.
-</body>
-</html>
+{% extends 'Forum/index.html' %}
+{% load staticfiles %}
+{% block head_title %}
+    Can't access
+{% endblock %}
+{% block forum_content %}
+    <div class="alert alert-danger">
+        <strong>Sorry...</strong> You don't have permission to access this page.
+    </div>
+{% endblock %}
